[package]
edition = "2021"
name = "quinn-js"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-std = "1.12.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
quinn = "0.10.2"
rustls = "0.21.9"
tokio = "1.34.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
