[package]
edition = "2021"
name = "quinn-js"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-std = "1.12.0"
futures = "0.3.30"
futures-timer = "3.0.2"
libp2p-identity = { version = "0.2.8", features = ["secp256k1"] }
libp2p-tls = "0.3.0"
multiaddr = "0.18.1"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["full"] }
napi-derive = "2.12.2"
quinn = "0.10.2"
ring = "0.16.20"
rustls = "0.22.1"
tokio = "1.34.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
